packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel-serviceaccounts/kyverno-test/patched.yaml
apiVersion: v1
automountServiceAccountToken: false
kind: ServiceAccount
metadata:
  name: update-token-automount-2
  namespace: update-automountserviceaccounttokens-2
---
apiVersion: v1
automountServiceAccountToken: false
kind: ServiceAccount
metadata:
  name: update-token-automount-wild-1
  namespace: update-automountserviceaccounttokens-2
